--- a/furniture_Sales_Management/src/view/ProfilePage.form
+++ b/furniture_Sales_Management/src/view/ProfilePage.form
@@ -43,9 +43,9 @@
                   <Component id="GenderTxt" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Component id="PassTxt" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="PassBtn" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="DeleteBtn" min="-2" max="-2" attributes="0"/>
                   <Component id="BackBtn" min="-2" pref="81" max="-2" attributes="0"/>
@@ -58,54 +58,47 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="313" max="-2" attributes="0"/>
-                      <Component id="PassBtn" min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="ProfileLbl" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="IdLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="IdTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="NameLbl" min="-2" max="-2" attributes="0"/>
+                  <Component id="NameTxt" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="EmailLbl" min="-2" max="-2" attributes="0"/>
+                  <Component id="EmailTxt" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="GenderLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="GenderTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="ProfileLbl" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="IdLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="IdTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="NameLbl" min="-2" max="-2" attributes="0"/>
-                          <Component id="NameTxt" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="EmailLbl" min="-2" max="-2" attributes="0"/>
-                          <Component id="EmailTxt" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="GenderLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="GenderTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="DeleteBtn" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="EditBtn" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                              <Component id="UserLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="UserTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="PassLbl" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="PassTxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="BackBtn" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Component id="DeleteBtn" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="EditBtn" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="UserLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="UserTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+              </Group>
+              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="PassBtn" pref="0" max="32767" attributes="0"/>
+                  <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                      <Component id="PassLbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="PassTxt" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="BackBtn" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="48" max="32767" attributes="0"/>
           </Group>
